Loading page, stole css

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,14 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/euroclojure.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/solarized-light.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <div class="loading">
+        <br/>
+        <header>
+          <h1>A TALE OF CLOJURESCRIPT IN PRODUCTION</h1>
+          <h2>AT A PAYMENT COMPANY</h2>
+        </header>
+
+        <p>Jean-Louis Giordano (<a href="https://twitter.com/jellismymind">@jellismymind</a>)</p>
+
+        <img src="images/clojure.png" height="149" width="150" alt="Clojure">
+
+        <h3>euroclojure</h3>
+        <p>october 25-26, 2016<br> Bratislava, Slovakia<br></p>
+        <footer>
+          <br>
+          <ul class="buttons vertical">
+            <li>
+              <a href="javascript:euroclojure.core.start()" class="button fit scrolly">
+                Let's Go!
+              </a>
+            </li>
+          </ul>
+        </footer>
+      </div>
     </div>
-    <script src="js/compiled/euroclojure_cljs.js" type="text/javascript"></script>
+    <script src="js/compiled/euroclojure.js" type="text/javascript"></script>
   </body>
 </html>
